@@ -5,6 +5,8 @@ SUMMARY OF NEW FEATURES AND BUG FIXES SINCE V4.0
 Version 6.8 - not yet released
 * data files
   - optimise the topography loader
+* devices
+  - Volkslogger: support DAeC keyhole declaration
 * calculations
   - use maximum speed configured in plane setup as limit for calculations
   - use WGS84 earth ellipsoid for distance calculations (#2809)
